# test-5elem

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: chat.db  settings.py
backend/src/db/: sqlite_handler.py
backend/src/dependencies/: auth.py
backend/src/exceptions/: custom_exceptions.py  decorators.py  exception_handlers.py
backend/src/llm/: openrouter_client.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 64974c4e27b4_create_tables.py
backend/src/models/: __init__.py  base.py  chats.py  messages.py  mixins.py  users.py
backend/src/repositories/: auth.py  chat.py  message.py
backend/src/routers/: auth.py  chat.py  message.py
backend/src/schemas/: auth.py  base.py  chat.py  message.py
backend/src/services/: auth.py  chat.py  message.py
backend/src/utils/: jwt_handler.py  pwd_hashing.py
frontend/: Dockerfile  index.html  login.html  nginx.conf
frontend/css/: styles.css
frontend/js/: api.js  app.js  auth.js  chats.js  messages.js
